**  denotes quite substantial/important changes
*** denotes really big changes 

Liable to change in future release:
- method="GCV.Cp" as default in gam. Default will 
  change to "REML". (1.8-24, June 2018) 

Currently deprecated and liable to be removed:
- gam performance iteration (1.8-19, Sept 2017)
- argument 'pers' in plot.gam (1.8-23, Nov 2017)

Issues: 

* t2 in bam(...,discrete=TRUE) - not treated as tensor products at 
present, and reparameterization needs checking (also for bam). 

* OpenBLAS 0.3.2/3 appears not to be thread safe at present - can
  cause problems when opemmp multithreading.

* Null deviance igores offset in gam.fit4

1.8-27

** Added routine 'ginla' for fully Bayesian inference based on an integrated
  nested Laplace approximation (INLA) approach. See ?ginla.

* preinitialize in general families is now a function, not an expression. See 
  cox.ph for an example.

* added routine cholup for rank one modification of Cholesky factor.

* two stage gam/bam fitting now allows 'sp' to be modified. 

* predict.gam could fail with type="response" for families requiring the 
  response to be provided in this case (e.g. cox.ph). Fixed.

* sp.vcov defaults to extracting edge corrected log sp cov matrix, if 
  gam(...,gam.control(edge.control=TRUE)) used for fitting. 

* gam(...,gam.control(edge.correct=TRUE)) could go into infinite loop if
  sp was effectively zero. Corrected.


1.8-26

* LINPACK dependency removed.

* Added service routine choldrop to down date a Cholesky factor on row/col
  deletion.

* liu2 had a check messed up when vectorized. Fix to stop vector being 
  checked for equality to zero.

1.8-25

** bam(...,discrete=TRUE) methods improved. Cross products now usually faster 
   (can be much faster) and code can now make better use of optimised BLAS. 

* fix to 'fs' smooth.construct method and smooth2random method, to allow
  constructor to be called without a "gamm" atribute set on the smooth spec