@@ -2,14 +2,14 @@
 \alias{ginla}
 %- Also NEED an `\alias' for EACH other topic documented here.
 \title{GAM Integrated Nested Laplace Approximation Newton Enhanced}
-\description{Apply Integrated Nested Laplace Approximation (INLA, Rue et al. 2009) to models estimable by \code{\link{gam}}, using the INLA variant described in Wood (2018). Produces marginal posterior densities for each coefficient, selected coefficients or linear transformations of the coefficient vector. 
+\description{Apply Integrated Nested Laplace Approximation (INLA, Rue et al. 2009) to models estimable by \code{\link{gam}} or \code{\link{bam}}, using the INLA variant described in Wood (2018). Produces marginal posterior densities for each coefficient, selected coefficients or linear transformations of the coefficient vector. 
 }
 \usage{
 ginla(G,A=NULL,nk=16,nb=100,J=1,interactive=FALSE,int=0)
 }
 %- maybe also `usage' for other objects documented here.
 \arguments{
- \item{G}{A pre-fit gam object, as produced by \code{gam(...,fit=FALSE)}.}
+ \item{G}{A pre-fit gam object, as produced by \code{gam(...,fit=FALSE)} or \code{bam(...,discrete=TRUE,fit=FALSE)}.}
 \item{A}{Either a matrix of transforms of the coefficients that are of interest, or an array of indices of the parameters of interest. If \code{NULL} then distributions are produced for all coefficients.}
 \item{nk}{Number of values of each coefficient at which to evaluate its log marginal posterior density. These points are then spline interpolated.}
 \item{nb}{Number of points at which to evaluate posterior density of coefficients for returning as a gridded function.}
@@ -24,7 +24,9 @@ A list with elements \code{beta} and \code{density}, both of which are matrices.
 
 \details{Let \eqn{\beta}{b}, \eqn{\theta}{h} and \eqn{y}{y} denote the model coefficients, hyperparameters/smoothing parameters and response data, respectively. In principle, INLA employs Laplace approximations for \eqn{\pi(\beta_i|\theta,y)}{p(b_i|h,y)} and \eqn{\pi(\theta|y)}{p(h|y)} and then obtains the marginal posterior distribution \eqn{\pi(\beta_i|y)}{p(b_i|y)} by intergrating the approximations to \eqn{\pi(\beta_i|\theta,y)\pi(\theta|y)}{p(b_i|h,y)p(h|y)} w.r.t \eqn{\theta}{h} (marginals for the hyperparameters can also be produced). In practice the Laplace approximation for \eqn{\pi(\beta_i|\theta,y)}{p(b_i|h,y)} is too expensive to compute for each \eqn{\beta_i}{b_i} and must itself be approximated. To this end, there are two quantities that have to be computed: the posterior mode \eqn{\beta^*|\beta_i}{b*|b_i} and the determinant of the Hessian of the joint log density \eqn{\log \pi(\beta,\theta,y)}{log p(b,h,y)} w.r.t. \eqn{\beta}{b} at the mode. Rue et al. (2009) originally approximated the posterior conditional mode by the conditional mode implied by a simple Gaussian approximation to the posterior \eqn{\pi(\beta|y)}{p(b|y)}. They then approximated the log determinant of the Hessian as a function of \eqn{\beta_i}{b_i} using a first order Taylor expansion, which is cheap to compute for the sparse model representaiton that they use, but not when using the dense low rank basis expansions used by \code{\link{gam}}. They also offer a more expensive alternative approximation based on computing the log determiannt with respect only to those elements of \eqn{\beta}{b} with sufficiently high correlation with \eqn{\beta_i}{b_i} according to the simple Gaussian posterior approximation: efficiency again seems to rest on sparsity. Wood (2018) suggests computing the required posterior modes exactly, and basing the log determinant approximation on a BFGS update of the Hessian at the unconditional model. The latter is efficient with or without sparsity, whereas the former is a `for free' improvement. Both steps are efficient because it is cheap to obtain the Cholesky factor of \eqn{H[-i,-i]}{H[-i,-i]} from that of \eqn{H}{H} - see \code{\link{choldrop}}. This is the approach taken by this routine.
 
-Note that for many models the INLA estimates are very close to the usual Gaussian approximation to the posterior. 
+Note that for many models the INLA estimates are very close to the usual Gaussian approximation to the posterior, the \code{interactive} argument is useful for investigating this issue.
+
+\code{\link{bam}} models are only supported with the \code{disrete=TRUE} option. The \code{discrete=FALSE} approach would be too inefficient. AR1 models are not supported (related arguments are simply ignored). 
 }
 
 \references{
@@ -37,6 +39,8 @@ Wood (2018, submitted) Simplified Integrated Laplace Approximation.
 This routine is still somewhat experimental, so details are liable to change. Also currently not all steps are optimally efficient.
 
 The routine is written for relatively expert users.
+
+
 }
 
 \author{ Simon N. Wood \email{simon.wood@r-project.org}}
@@ -47,17 +51,19 @@ The routine is written for relatively expert users.
   ## example using a scale location model for the motorcycle data. A simple plotting
   ## routine is produced first...
 
-  plot.inla <- function(x,inla,k=1,levels=c(.025,.1,.5,.9,.975),lcol = c(2,4,4,4,2),
-               lwd = c(1,1,2,1,1),lty=c(1,1,1,1,1),xlab="x",ylab="y",cex.lab=1.5) {
-    ## a simple effect plotter, when distributions of function values of 1D smooths
-    ## have been computed
+  plot.inla <- function(x,inla,k=1,levels=c(.025,.1,.5,.9,.975),
+               lcol = c(2,4,4,4,2),lwd = c(1,1,2,1,1),lty=c(1,1,1,1,1),
+	       xlab="x",ylab="y",cex.lab=1.5) {
+    ## a simple effect plotter, when distributions of function values of
+    ## 1D smooths have been computed
     require(splines)
     p <- length(x) 
     betaq <- matrix(0,length(levels),p) ## storage for beta quantiles 
     for (i in 1:p) { ## work through x and betas
       j <- i + k - 1
       p <- cumsum(inla$density[j,])*(inla$beta[j,2]-inla$beta[j,1])
-      betaq[,i] <- approx(p,y=inla$beta[j,],levels)$y ## getting quantiles of function values
+      ## getting quantiles of function values...
+      betaq[,i] <- approx(p,y=inla$beta[j,],levels)$y
     }
     xg <- seq(min(x),max(x),length=200)
     ylim <- range(betaq)
@@ -75,7 +81,7 @@ The routine is written for relatively expert users.
 
   G <- gam(list(accel~s(times,k=20,bs="ad"),~s(times)),
             data=mcycle,family=gaulss(),fit=FALSE)
-  b <- gam(G=G,method="REML") ## regular GAM fit
+  b <- gam(G=G,method="REML") ## regular GAM fit for comparison
 
   ## Now use ginla to get posteriors of estimated effect values
   ## at evenly spaced times. Create A matrix for this...
