@@ -11,6 +11,8 @@ Currently deprecated and liable to be removed:
 
 Issues: 
 
+* bam ignoring scale in some cases (e.g. tw discrete)
+
 * t2 in bam(...,discrete=TRUE) - not treated as tensor products at 
 present, and reparameterization needs checking (also for bam). 
 
@@ -23,6 +25,8 @@ present, and reparameterization needs checking (also for bam).
 
 ** Added routine 'ginla' for fully Bayesian inference based on an integrated
   nested Laplace approximation (INLA) approach. See ?ginla.
+
+* bam was ignoring supplied scale parameter in extended family cases - fixed.
 
 * preinitialize in general families is now a function, not an expression. See 
   cox.ph for an example.
